# alfredagain

./: .env.example  .gitignore  CLAUDE.md  COMMIT_MSG.txt  Dockerfile  Procfile  README.md  pyproject.toml  railway.json
config/: taxonomy.yaml
docs/: Adaptive Onboarding for Alfred Cooking A.txt  Alfred Session Audit - Detailed Analysis.md  IDEAS.md  ROADMAP.md  act-prompt-audit.md  architecture_overview.md  architecture_v3_design.md  capabilities-architecture.md  context engg2.md  context-api-spec.md  context-engineering-architecture.md  data_model_decisions.md  decision_architecture.md  gpt-5-1-responses.md  gpt-5-1-webhooks.md  mode-configurations-spec.md  notes.md  onboarding-spec.md  pr-unified-context-api.md  progressive-data-visibility-spec.md  session-id-registry-spec.md  understand-context-management-spec.md  ux_learnings.md  v4-architecture-spec.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
migrations/: 001_core_tables.sql  002_schema_introspection.sql  003_test_users.sql  009_phase_7a_schema.sql  010_phase_7b_enrichment.sql  011_meal_type_other.sql  012_fix_rls_policies.sql  013_recipe_ingredients_user_id.sql  014_flexible_preferences.sql  015_fix_fk_cascades.sql  016_pg_trgm.sql  017_semantic_matching.sql  018_add_category_columns.sql  019_prompt_logs.sql  020_subdomain_guidance.sql  021_seed_subdomain_guidance.sql  022_recipe_tag_columns.sql  023_drop_equipment_constraint.sql  024_rls_with_auth.sql  025_rls_performance_fix.sql  026_onboarding_tables.sql  027_ingredient_enrichment.sql  028_family_not_null.sql  029_conversations_table.sql  030_jobs_table.sql  031_inventory_unique_constraint.sql  032_dedupe_ingredients.sql  033_fix_vector_search_path.sql  (+5 more)
(+403 files in other folders)
